src/qpoint.h

  /* Quaternion */
  typedef double quat_t[4];
  
  /* 3-vector */
  typedef double vec3_t[3];
  
  /* ************************************************************************* 
     Internal parameter settings
     ********************************************************************** */
  
  /* state structure for keeping track of transformation updates */
  typedef struct {
    double update_rate; // period in seconds
    double ctime_last; // time of last update
  } qp_state_t;
  
  /* structure for storing refraction data */
  typedef struct {
    double height;      // height, m
    double temperature; // temperature, C
    double pressure;    // pressure, mbar
    double humidity;    // humidity, fraction
    double frequency;   // frequency, ghz
    double lapse_rate;  // tropospheric lapse rate, K/m
  } qp_weather_t;
  
  /* structures for storing Bulletin A data (for wobble correction) */
  typedef struct {
    float x;
    float y;
    float dut1;
  } qp_bulletina_entry_t;
  
  typedef struct {
    qp_bulletina_entry_t *entries;
    int mjd_min;
    int mjd_max;
  } qp_bulletina_t;
  
  /* parameter structure for storing corrections computed at variable rates */
  typedef struct qp_memory_t {
    int initialized;
    
    // update state
    qp_state_t state_daber;     // diurnal aberration
    qp_state_t state_lonlat;    // lat/lon
    qp_state_t state_wobble;    // polar motion
    qp_state_t state_dut1;      // ut1 correction
    qp_state_t state_erot;      // earth's rotation
    qp_state_t state_npb;       // nutation, precession, frame bias    
    qp_state_t state_aaber;     // annual aberration
    qp_state_t state_ref;       // refraction
    
    // state data
    qp_weather_t weather;     // weather
    double ref_tol;           // refraction tolerance, rad
    double ref_delta;         // refraction correction, deg
    double dut1;              // UT1 correction
    quat_t q_lonlat;          // lonlat quaternion
    quat_t q_wobble;          // wobble quaternion
    quat_t q_npb;             // nutation etc quaternion
    quat_t q_erot;            // earth's rotation quaternion
    vec3_t beta_earth;        // earth velocity
    qp_bulletina_t bulletinA; // bulletin A data
    
    // options
    int accuracy;          // 0=full accuracy, 1=low accuracy
    int mean_aber;         // 0=per-detector aberration, 1=mean
    int fast_math;         // 0=regular trig, 1=polynomial trig approximations
    int polconv;           // polarization convention (0=healpix,1=IAU)
    int pair_dets;         // pair A/B detectors for bore2map (1=True, 0=False)
    int pix_order;         // pixel ordering (1=nest, 0=ring)
    int num_threads;       // number of parallel threads
  } qp_memory_t;
  
  /* parameter initialization */
  qp_memory_t * qp_init_memory(void);
  void qp_free_memory(qp_memory_t *mem);
  
  /* Calculate Greenwich mean sidereal time in hours */
  double qp_gmst(qp_memory_t *mem, double ctime);
  /* Calculate Greenwich mean sidereal time in hours */
  void qp_gmstn(qp_memory_t *mem, double *ctime, double *gmst, int n);
  /* Calculate local mean sidereal time in hours */
  double qp_lmst(qp_memory_t *mem, double ctime, double lon);
  
  /* Calculate local mean sidereal time in hours */
  void qp_lmstn(qp_memory_t *mem, double *ctime, double *lon, double *lmst,
		int n);
  
  /* Calculate dipole amplitude */
  double qp_dipole(qp_memory_t *mem, double ctime, double ra, double dec);
  /* Calculate dipole amplitudes */
  void qp_dipolen(qp_memory_t *mem, double *ctime, double *ra, double *dec,
                  double *dipole, int n);
  /* Calculate waveplate quaternion, given _physical_ HWP angle */
  void qp_hwp_quat(double ang, quat_t q);
  
  /* Calculate waveplate quaternions */
  void qp_hwp_quatn(double *ang, quat_t *q, int n);
  
  /* Compute boresight quaternions for n gondola orientations. */
  void qp_azel2bore(qp_memory_t *mem, double *az, double *el, double *pitch,
		    double *roll, double *lon, double *lat, double *ctime,
		    quat_t *q, int n);
  
  /* Compute detector offset quaternion. */
  void qp_det_offset(double delta_az, double delta_el, double delta_psi,
		     quat_t q);
  
  /* Compute detector offset quaternion. */
  void qp_det_offsetn(double *delta_az, double *delta_el, double *delta_psi,
		      quat_t *q, int n);
  
  /* Calculate ra/dec and sin(2*psi)/cos(2*psi) for a given detector offset,
     from an array of boresight quaternions. */
  void qp_bore2radec(qp_memory_t *mem, quat_t q_off, double *ctime, quat_t *q_bore,
		     double *ra, double *dec, double *sin2psi, double *cos2psi,
		     int n);
  
  /* Calculate ra/dec and sin(2*psi)/cos(2*psi) for a given detector offset,
     from an array of boresight and waveplate quaternions. */
  void qp_bore2radec_hwp(qp_memory_t *mem, quat_t q_off, double *ctime,
			 quat_t *q_bore, quat_t *q_hwp, double *ra, double *dec,
			 double *sin2psi, double *cos2psi, int n);
  
  /* Calculate ra/sin(dec) and sin(2*psi)/cos(2*psi) for a given detector offset. */
  void qp_bore2rasindec(qp_memory_t *mem, quat_t q_off, double *ctime, quat_t *q_bore,
			double *ra, double *sindec, double *sin2psi, double *cos2psi,
			int n);
  
  /* Calculate ra/sin(dec) and sin(2*psi)/cos(2*psi) for a given detector offset. */
  void qp_bore2rasindec_hwp(qp_memory_t *mem, quat_t q_off, double *ctime,
			    quat_t *q_bore, quat_t *q_hwp, double *ra, double *sindec,
			    double *sin2psi, double *cos2psi, int n);
  
  /* Calculate ra/dec and sin(2*psi)/cos(2*psi) for a given detector offset,
     from a set of boresight orientations. */
  void qp_azel2radec(qp_memory_t *mem,
		     double delta_az, double delta_el, double delta_psi,
		     double *az, double *el, double *pitch, double *roll,
		     double *lon, double *lat, double *ctime, 
		     double *ra, double *dec, double *sin2psi, double *cos2psi,
		     int n);
  /* Calculate ra/dec and sin(2*psi)/cos(2*psi) for a given detector offset,
     from a set of boresight orientations and waveplate angles. */
  void qp_azel2radec_hwp(qp_memory_t *mem,
			 double delta_az, double delta_el, double delta_psi,
			 double *az, double *el, double *pitch, double *roll,
			 double *lon, double *lat, double *ctime, double *hwp,
			 double *ra, double *dec, double *sin2psi, double *cos2psi,
			 int n);
  
  /* Calculate ra/sin(dec) and sin(2*psi)/cos(2*psi) for a given detector offset,
     from a set of boresight orientations.  */
  void qp_azel2rasindec(qp_memory_t *mem,
			double delta_az, double delta_el, double delta_psi,
			double *az, double *el, double *pitch, double *roll,
			double *lon, double *lat, double *ctime, 
			double *ra, double *sindec, double *sin2psi, double *cos2psi,
			int n);
  /* Calculate ra/sin(dec) and sin(2*psi)/cos(2*psi) for a given detector offset,
     from a set of boresight orientations.  */
  void qp_azel2rasindec_hwp(qp_memory_t *mem,
			    double delta_az, double delta_el, double delta_psi,
			    double *az, double *el, double *pitch, double *roll,
			    double *lon, double *lat, double *ctime, double *hwp,
			    double *ra, double *sindec, double *sin2psi,
			    double *cos2psi, int n);
  
  /* ************************************************************************* 
     Pixelization
     ********************************************************************** */
  
  /* Pixel, contains (hits, p01, p02, p11, p12, p22) */
  typedef double pixel_t[6];
  
  /* Compute healpix pixel number for given nside and ra/dec */
  long qp_radec2pix(qp_memory_t *mem, int nside, double ra, double dec);
  /* Compute healpix pixel number for given nside and ra/dec */
  void qp_radec2pixn(qp_memory_t *mem, int nside, double *ra, double *dec,
                     long *pix, int n);
  
  /* Compute pointing matrix map for given boresight timestream and many detector
     offsets. pmap is a npix-x-6 array containing (hits, p01, p02, p11, p12, p22) */
  void qp_bore2map(qp_memory_t *mem, quat_t *q_off, int ndet,
		   double *ctime, quat_t *q_bore, int n,
		   pixel_t *pmap, int nside);