python/_libqpoint.py

# ctypes wrapper for libqpoint

import ctypes as ct
import numpy as np
import os

# structures

class qp_state_t(ct.Structure):
    _fields_ = [
        ('update_rate', ct.c_double),
        ('ctime_last', ct.c_double)
        ]

class qp_weather_t(ct.Structure):
    _fields_ = [
        ('height', ct.c_double),
        ('temperature', ct.c_double),
        ('pressure', ct.c_double),
        ('humidity', ct.c_double),
        ('frequency', ct.c_double),
        ('lapse_rate', ct.c_double),
        ]

class qp_bulletina_entry_t(ct.Structure):
    _fields_ = [
        ('x', ct.c_float),
        ('y', ct.c_float),
        ('dut1', ct.c_float),
        ]

class qp_bulletina_t(ct.Structure):
    _fields_ = [
        ('entries', ct.POINTER(qp_bulletina_entry_t)),
        ('mjd_min', ct.c_int),
        ('mjd_max', ct.c_int),
        ]

class qp_memory_t(ct.Structure):
    _fields_ = [
        ('initialized', ct.c_int),
        ('state_daber', qp_state_t),
        ('state_lonlat', qp_state_t),
        ('state_wobble', qp_state_t),
        ('state_dut1', qp_state_t),
        ('state_erot', qp_state_t),
        ('state_npb', qp_state_t),
        ('state_aaber', qp_state_t),
        ('state_ref', qp_state_t),
        ('weather', qp_weather_t),
        ('ref_tol', ct.c_double),
        ('ref_delta', ct.c_double),
        ('dut1', ct.c_double),
        ('q_lonlat', ct.c_double * 4),
        ('q_wobble', ct.c_double * 4),
        ('q_npb', ct.c_double * 4),
        ('q_erot', ct.c_double * 4),
        ('beta_earth', ct.c_double * 3),
        ('bulletinA', qp_bulletina_t),
        ('accuracy', ct.c_int),
        ('mean_aber', ct.c_int),
        ('fast_math', ct.c_int),
        ('polconv', ct.c_int),
        ('pair_dets', ct.c_int),
        ('pix_order', ct.c_int),
        ('num_threads', ct.c_int),
        ]

# library functions

libqp = np.ctypeslib.load_library('libqpoint',os.path.dirname(__file__))
NDP = np.ctypeslib.ndpointer
qp_memory_t_p = ct.POINTER(qp_memory_t)

libqp.qp_init_memory.restype = qp_memory_t_p
libqp.qp_free_memory.argtypes = (qp_memory_t_p,)

libqp.qp_azel2radec.argtypes = (qp_memory_t_p, # params
                                ct.c_double, ct.c_double, ct.c_double, # offset
                                NDP(dtype=np.double), # az
                                NDP(dtype=np.double), # el
                                NDP(dtype=np.double), # pitch
                                NDP(dtype=np.double), # roll
                                NDP(dtype=np.double), # lon
                                NDP(dtype=np.double), # lat
                                NDP(dtype=np.double), # ctime
                                NDP(dtype=np.double), # ra
                                NDP(dtype=np.double), # dec
                                NDP(dtype=np.double), # sin2psi
                                NDP(dtype=np.double), # cos2psi
                                ct.c_int) # n

libqp.qp_azel2radec_hwp.argtypes = (qp_memory_t_p, # params
                                    ct.c_double, ct.c_double, ct.c_double, # offset
                                    NDP(dtype=np.double), # az
                                    NDP(dtype=np.double), # el
                                    NDP(dtype=np.double), # pitch
                                    NDP(dtype=np.double), # roll
                                    NDP(dtype=np.double), # lon
                                    NDP(dtype=np.double), # lat
                                    NDP(dtype=np.double), # ctime
                                    NDP(dtype=np.double), # hwp
                                    NDP(dtype=np.double), # ra
                                    NDP(dtype=np.double), # dec
                                    NDP(dtype=np.double), # sin2psi
                                    NDP(dtype=np.double), # cos2psi
                                    ct.c_int) # n

libqp.qp_azel2rasindec.argtypes = (qp_memory_t_p, # params
                                   ct.c_double, ct.c_double, ct.c_double, # offset
                                   NDP(dtype=np.double), # az
                                   NDP(dtype=np.double), # el
                                   NDP(dtype=np.double), # pitch
                                   NDP(dtype=np.double), # roll
                                   NDP(dtype=np.double), # lon
                                   NDP(dtype=np.double), # lat
                                   NDP(dtype=np.double), # ctime
                                   NDP(dtype=np.double), # ra
                                   NDP(dtype=np.double), # sindec
                                   NDP(dtype=np.double), # sin2psi
                                   NDP(dtype=np.double), # cos2psi
                                   ct.c_int) # n

libqp.qp_azel2rasindec_hwp.argtypes = (qp_memory_t_p, # params
                                       ct.c_double, ct.c_double, ct.c_double, # offset
                                       NDP(dtype=np.double), # az
                                       NDP(dtype=np.double), # el
                                       NDP(dtype=np.double), # pitch
                                       NDP(dtype=np.double), # roll
                                       NDP(dtype=np.double), # lon
                                       NDP(dtype=np.double), # lat
                                       NDP(dtype=np.double), # ctime
                                       NDP(dtype=np.double), # hwp
                                       NDP(dtype=np.double), # ra
                                       NDP(dtype=np.double), # sindec
                                       NDP(dtype=np.double), # sin2psi
                                       NDP(dtype=np.double), # cos2psi
                                       ct.c_int) # n

libqp.qp_azel2bore.argtypes = (qp_memory_t_p, # params
                               NDP(dtype=np.double), # az
                               NDP(dtype=np.double), # el
                               NDP(dtype=np.double), # pitch
                               NDP(dtype=np.double), # roll
                               NDP(dtype=np.double), # lon
                               NDP(dtype=np.double), # lat
                               NDP(dtype=np.double), # ctime
                               NDP(dtype=np.double), # q
                               ct.c_int) # n

libqp.qp_det_offset.argtypes = (ct.c_double, ct.c_double, ct.c_double, # offset
                               NDP(dtype=np.double)) # quat

libqp.qp_det_offsetn.argtypes = (NDP(dtype=np.double), # delta_az
                                NDP(dtype=np.double), # delta_el
                                NDP(dtype=np.double), # delta_psi
                                NDP(dtype=np.double), # quat
                                ct.c_int) # n

libqp.qp_hwp_quat.argtypes = (ct.c_double, # ang
                              NDP(dtype=np.double)) # quat

libqp.qp_hwp_quatn.argtypes = (NDP(dtype=np.double), # ang
                               NDP(dtype=np.double), # quat
                               ct.c_int) # n

libqp.qp_gmst.argtypes = (qp_memory_t_p, # params
                          ct.c_double) # ctime
libqp.qp_gmst.restype = ct.c_double # gmst

libqp.qp_gmstn.argtypes = (qp_memory_t_p, # params
                           NDP(dtype=np.double), # ctime
                           NDP(dtype=np.double), # gmst
                           ct.c_int) # n

libqp.qp_lmst.argtypes = (qp_memory_t_p, # params
                          ct.c_double, # ctime
                          ct.c_double) # lon
libqp.qp_lmst.restype = ct.c_double # lmst

libqp.qp_lmstn.argtypes = (qp_memory_t_p, # params
                           NDP(dtype=np.double), # ctime
                           NDP(dtype=np.double), # lon
                           NDP(dtype=np.double), # lmst
                           ct.c_int) # n

libqp.qp_dipole.argtypes = (qp_memory_t_p, # params
                            ct.c_double, # ctime
                            ct.c_double, # ra
                            ct.c_double) # dec
libqp.qp_dipole.restype = ct.c_double # dipole

libqp.qp_dipolen.argtypes = (qp_memory_t_p, # params
                             NDP(dtype=np.double), # ctime
                             NDP(dtype=np.double), # ra
                             NDP(dtype=np.double), # dec
                             NDP(dtype=np.double), # dipole
                             ct.c_int) # n

libqp.qp_bore2radec.argtypes = (qp_memory_t_p, # params
                                NDP(dtype=np.double), # offset
                                NDP(dtype=np.double), # ctime
                                NDP(dtype=np.double), # q
                                NDP(dtype=np.double), # ra
                                NDP(dtype=np.double), # dec
                                NDP(dtype=np.double), # sin2psi
                                NDP(dtype=np.double), # cos2psi
                                ct.c_int) # n

libqp.qp_bore2radec_hwp.argtypes = (qp_memory_t_p, # params
                                    NDP(dtype=np.double), # offset
                                    NDP(dtype=np.double), # ctime
                                    NDP(dtype=np.double), # q_bore
                                    NDP(dtype=np.double), # q_hwp
                                    NDP(dtype=np.double), # ra
                                    NDP(dtype=np.double), # dec
                                    NDP(dtype=np.double), # sin2psi
                                    NDP(dtype=np.double), # cos2psi
                                    ct.c_int) # n

libqp.qp_bore2rasindec.argtypes = (qp_memory_t_p, # params
                                   NDP(dtype=np.double), # offset
                                   NDP(dtype=np.double), # ctime
                                   NDP(dtype=np.double), # q
                                   NDP(dtype=np.double), # ra
                                   NDP(dtype=np.double), # sindec
                                   NDP(dtype=np.double), # sin2psi
                                   NDP(dtype=np.double), # cos2psi
                                   ct.c_int) # n

libqp.qp_bore2rasindec_hwp.argtypes = (qp_memory_t_p, # params
                                       NDP(dtype=np.double), # offset
                                       NDP(dtype=np.double), # ctime
                                       NDP(dtype=np.double), # q_bore
                                       NDP(dtype=np.double), # q_hwp
                                       NDP(dtype=np.double), # ra
                                       NDP(dtype=np.double), # sindec
                                       NDP(dtype=np.double), # sin2psi
                                       NDP(dtype=np.double), # cos2psi
                                       ct.c_int) # n

libqp.qp_radec2pix.argtypes = (qp_memory_t_p, # params
                               ct.c_int, # nside
                               ct.c_double, # ra
                               ct.c_double) # dec
libqp.qp_radec2pix.restype = ct.c_int

libqp.qp_radec2pixn.argtypes = (qp_memory_t_p, # params
                                ct.c_int, # nside
                                NDP(dtype=np.double), # ra
                                NDP(dtype=np.double), # dec
                                NDP(dtype=np.int), # pix
                                ct.c_int) # n

libqp.qp_bore2map.argtypes = (qp_memory_t_p, # params
                              NDP(dtype=np.double), # offsets
                              ct.c_int, # ndet
                              NDP(dtype=np.double), # ctime
                              NDP(dtype=np.double), # q_bore
                              ct.c_int, # n
                              NDP(dtype=np.double), # pmap
                              ct.c_int) # nside
